Fixes for contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	margin:1%;
 	padding:1%;
 	font-size:150%;
-	color: rgb(7, 106, 192);
+	color: rgb(3, 33, 60);
 	background-color: rgb(244, 236, 236);
 }
 
